--- a/ClientContactViews/Contact.xaml
+++ b/ClientContactViews/Contact.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ClientContactViews.Contact"
+﻿<Grid x:Class="ClientContactViews.Contact"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              d:DesignHeight="100" MinHeight="50" d:DesignWidth="350">
 
     
-    <UserControl.Resources>
+    <Grid.Resources>
         <SolidColorBrush x:Key="lighter" Color="#FEFEFF"/>
         <SolidColorBrush x:Key="light" Color="#897BAF"/>
         <SolidColorBrush x:Key="medium" Color="#423075"/>
@@ -24,8 +24,6 @@
         </Style>
 
         <Style TargetType="Button">
-            
-
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -50,9 +48,9 @@
             </Setter>
 
         </Style>
-    </UserControl.Resources>
+    </Grid.Resources>
 
-    <Grid>
+    
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -72,5 +70,5 @@
                 />
         </StackPanel>
 
-    </Grid>
-</UserControl>
+    
+</Grid>
