--- a/ClientContactViews/res/styles/ContactListStyles.xaml
+++ b/ClientContactViews/res/styles/ContactListStyles.xaml
@@ -6,7 +6,7 @@
     <SolidColorBrush x:Key="medium" Color="#423075"/>
     <SolidColorBrush x:Key="dark" Color="#14073A"/>
     <SolidColorBrush x:Key="darker" Color="#000000"/>
-    <Style x:Key="btn1" TargetType="ToggleButton">
+    <Style x:Key="toggleBtn1" TargetType="ToggleButton">
         <Setter Property="IsChecked" Value="{Binding Path=IsExpanded,Mode=TwoWay,
                                     RelativeSource={RelativeSource TemplatedParent}}"/>
         <Setter Property="Template">
@@ -45,11 +45,12 @@
         <Setter Property="Content" Value="{Binding Name}"/>
         <Setter Property="Grid.ColumnSpan" Value="2"/>
         <Setter Property="Background" Value="{StaticResource lighter}"/>
-        <Setter Property="Height" Value="40"/>
+        <Setter Property="Height" Value="50"/>
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}">
+                    <Border Background="{TemplateBinding Background}" >
                         <ContentPresenter HorizontalAlignment="Left" Margin="30,0,0,0" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
@@ -61,49 +62,54 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    <Style x:Key="expander" TargetType="Expander">
+        <Setter Property="Template">
+            <Setter.Value>
+                
+                <ControlTemplate TargetType="Expander">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Name="ContentRow" Height="0"/>
+                        </Grid.RowDefinitions>
 
+                        <Border >
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Button Style="{StaticResource expanderButton}"/>
+                                <ToggleButton Style="{StaticResource toggleBtn1}"/>
+                            </Grid>
+                        </Border>
+                        <ContentPresenter Grid.Row="1"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsExpanded" Value="True">
+                            <Setter TargetName="ContentRow" Property="Height" Value="Auto" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+                
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style TargetType="{x:Type GroupItem}">
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Expander Header="{Binding Name}" IsExpanded="True">
-                        <Expander.Template>
-                            <ControlTemplate TargetType="Expander">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
-                                        <RowDefinition Name="ContentRow" Height="0"/>
-                                    </Grid.RowDefinitions>
-
-                                    <Border Background="{StaticResource lighter}">
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="Auto" />
-                                                <ColumnDefinition Width="*" />
-                                            </Grid.ColumnDefinitions>
-                                            <Button Style="{StaticResource expanderButton}"/>
-                                            <ToggleButton IsChecked="{Binding Path=IsExpanded,Mode=TwoWay,
-                                    RelativeSource={RelativeSource TemplatedParent}}" Style="{StaticResource btn1}"/>
-
-                                        </Grid>
-                                    </Border>
-                                    <ContentPresenter Grid.Row="1"/>
-                                </Grid>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsExpanded" Value="True">
-                                        <Setter TargetName="ContentRow" Property="Height"
-                        Value="Auto" />
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Expander.Template>
+                    <Expander Header="{Binding Name}" Style="{StaticResource expander}" IsExpanded="True">
                         <ItemsPresenter />
                     </Expander>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="{x:Type ListBoxItem}">
+    
+    
+    <Style x:Key="contactListItem" TargetType="{x:Type ListBoxItem}">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="Background" Value="{StaticResource lighter}" />
         <Setter Property="Padding" Value="0" />
@@ -111,10 +117,22 @@
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
                 <Setter Property="IsSelected" Value="True"/>
             </Trigger>
-
-
+            <EventTrigger RoutedEvent="GotKeyboardFocus">
+                <BeginStoryboard>
+                    <!--Storyboard used to prevent listboxitems from being deselected on losing focus-->
+                        <Storyboard>
+                        <BooleanAnimationUsingKeyFrames Storyboard.TargetProperty="IsSelected">
+                            <DiscreteBooleanKeyFrame Value="True" KeyTime="0:0:0"/>
+                        </BooleanAnimationUsingKeyFrames>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            
         </Style.Triggers>
     </Style>
+    <DataTemplate x:Key="contactListDataTemplate">
+        <local:Contact  />
+    </DataTemplate>
     <!--
     <Style TargetType="ListBoxItem">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -132,6 +150,7 @@
                                             VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
                     <ControlTemplate.Triggers>
+                        
                         <Trigger Property="IsKeyboardFocusWithin" Value="True">
                             <Setter Property="IsSelected" Value="True"/>
                         </Trigger>
