--- a/ClientContactViews/Contact.xaml
+++ b/ClientContactViews/Contact.xaml
@@ -31,6 +31,7 @@
                             <Border.Style>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="VerticalAlignment" Value="Stretch"/>
+                                    
                                     <Setter Property="Background" Value="Transparent"/>
                                     <Style.Triggers>
                                         <Trigger Property="IsMouseOver" Value="True">
@@ -40,7 +41,7 @@
                                 </Style>
                             </Border.Style>
                             <Grid  >
-                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                             </Grid>
                         </Border>
                     </ControlTemplate>
@@ -57,7 +58,7 @@
         
         <Button  Grid.Column="0" Background="Transparent" Content="{Binding ContactName}" 
                  Command="{Binding Path=DataContext.UpdateContactInfo, ElementName=ListView}" 
-                 CommandParameter="{Binding id}"/>
+                 CommandParameter="{Binding id}" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
         <Image  Grid.Column="1" Source=".\res\user locked.png" ToolTip="The contact's user account is disabled."
                 Visibility="{Binding IsDisabled ,  
