--- a/ClientContactViews/res/styles/ContactListStyles.xaml
+++ b/ClientContactViews/res/styles/ContactListStyles.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:b="clr-namespace:ClientContactViews"
                     xmlns:local="clr-namespace:ClientContactViews">
     <SolidColorBrush x:Key="lighter" Color="#FEFEFF"/>
     <SolidColorBrush x:Key="light" Color="#897BAF"/>
@@ -7,6 +10,9 @@
     <SolidColorBrush x:Key="dark" Color="#14073A"/>
     <SolidColorBrush x:Key="darker" Color="#000000"/>
     <SolidColorBrush x:Key="listBoxItemBackground" Color="#e6e6ef"/>
+    <local:MyNullVisibilityConverter x:Key="NullToVisibilityConverter"/>
+    <local:MarginConverter x:Key="NullToMarginConverter"/>
+    
     <Style x:Key="toggleBtn1" TargetType="ToggleButton">
         <Setter Property="IsChecked" Value="{Binding Path=IsExpanded,Mode=TwoWay,
                                     RelativeSource={RelativeSource TemplatedParent}}"/>
@@ -77,7 +83,7 @@
                         </Grid.RowDefinitions>
 
                         <Border >
-                            <Grid>
+                            <Grid Visibility="{Binding Name, Converter={StaticResource NullToVisibilityConverter}}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
@@ -86,7 +92,7 @@
                                 <ToggleButton Style="{StaticResource toggleBtn1}"/>
                             </Grid>
                         </Border>
-                        <ContentPresenter Grid.Row="1"/>
+                        <ContentPresenter Grid.Row="1" Margin="{Binding Name, Converter={StaticResource NullToMarginConverter}}"/>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsExpanded" Value="True">
@@ -105,6 +111,7 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Expander Header="{Binding Name}" 
+                              
                               Style="{StaticResource expander}" 
                               IsExpanded="True">
                         <ItemsPresenter />
@@ -192,6 +199,7 @@
 
         <CollectionViewSource.GroupDescriptions>
             <PropertyGroupDescription  PropertyName="organisationName"/>
+            <PropertyGroupDescription  PropertyName="locationName"/>
         </CollectionViewSource.GroupDescriptions>
     </CollectionViewSource>
 </ResourceDictionary>
