Add filter button

--- a/ClientContactViews/ContactList.xaml
+++ b/ClientContactViews/ContactList.xaml
@@ -26,7 +26,15 @@
                    Foreground="#897BAF" Visibility="{Binding ElementName=SearchBar, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
             <TextBox MinWidth="50" VerticalContentAlignment="Center" Name="SearchBar" Text="{Binding Path=SearchBar, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" />
-        </Grid>
+        <Button HorizontalAlignment="Right" ToolTip="Filter Out Disabled Contacts" Command="{Binding FilterDisabled}">
+            <Image Source="res\filter-icon.png" 
+               Stretch="Uniform" 
+               Width="20"
+               Margin="5"
+               />
+        </Button>
+        
+    </Grid>
 
 
         <ListBox Grid.Row="1"  x:Name="ListView" Visibility="{Binding loaded ,  
