--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -59,8 +59,16 @@
                                              BorderBrush="{TemplateBinding BorderBrush}" 
                                              Background="{TemplateBinding Background}" 
                                              SnapsToDevicePixels="true">
-                            <ScrollViewer Name="PART_ContentHost" Background="{TemplateBinding Background}" 
+                            <Grid>
+                                <ScrollViewer Name="PART_ContentHost" Background="{TemplateBinding Background}" 
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                
+                                <local:EditTextBoxButton x:Name="EditBtn" 
+                                                         HorizontalAlignment="Right" 
+                                                         Width="30"
+                                                         Visibility="Hidden"/>
+                            </Grid>
+                            
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsReadOnly" Value="True">
@@ -68,6 +76,9 @@
                                 <Setter Property="Foreground" Value="Black"  />
                                 <Setter Property="BorderThickness" Value="1"/>
                                 <Setter Property="BorderBrush" Value="Transparent" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="EditBtn" Property="Visibility" Value="Visible"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
